k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: innovation-ui-service
spec:
  type: ClusterIP
  selector:
    app: innovation-ui-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
